--- a/index.html
+++ b/index.html
@@ -1,13 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JavaScript Lab</title>
+<html>
+    <head> 
+        <title>  Registration voters form </title>
 </head>
-<body>
-  hello
-  <script type="text/javascript" src="index.js"></script>
+<body style="background-color: rgb(241, 229, 239);">
+   
+<h1 style= "text-align:center;">UNIVERSITY VOTERS REGISTRATION FORM</h1>
+
+
+    <h2 style="background-color: rgb(127, 184, 241);">NAME</h2>
+</form>
+First Name: <input type="text" size="12" name="Firstname" maxsize="42">
+Middle Name: <input type="text" size="12" Name="middlename" maxsize="42">
+Surname; <input type="text" size="12" name="Surname" maxsize="42">
+
+<h2 
+style="background-color:rgb(127, 184, 241);">CAMPUS
+</h2>
+
+<form>
+<P>
+    Choose your campus
+</P>
+<select campus="campus">
+    <option value="Main">Main</option>
+    <option value="Town">Town</option>
+    <option value="Namanga">Namanga</option>
+</select>
+</form>
+
+<h2 
+style="background-color:rgb(127, 184, 241);">FACULTY
+</h2>
+
+<form>
+<P>
+    Choose your Faculty
+</P>
+<select faculty="faculty">
+    <option value="School of Technology">School of Technology</option>
+    <option value="School of Business">School of Business</option>
+    <option value="School of Hospitality">School of Hospitality</option>
+    <option value="School of Education">School of Education</option>
+    <option value="School of Arts">School of Arts</option>
+</select>
+</form>
+
+<h2 style="background-color: rgb(127, 184, 241);">COURSE</h2>
+</form>
+Course: <input type="text" size="12" name="Course" maxsize="42">
+
+<h2 style="background-color: rgb(127, 184, 241);">MORE INFORMATION 
+</h2>
+Birthdate: <input type="text" size="12" name="birthdate" maxsize="42">
+Phone Number:<input type="text" size="12" name="phone number" maxsize="42">
+Admission No:<input type="text" size="12" name="admission number" maxsize="42">
+Email: <input type="text" size="12" name="email" maxsize="42">
+
+<h2 
+style="background-color: rgb(127, 184, 241);">GENDER
+</h2>
+
+<form>
+<P>
+    Choose your gender
+</P>
+<select sex="sex">
+    <option value="male">male</option>
+    <option value="female">female</option>
+    <option value="prefer not to say">prefer not to say</option>
+</select>
+</form>
+
+<br>
+ </style>
+ <input  type="submit" name="submit" value="submit"> 
 </body>
 </html>
